# kitti_2d_perception

./: CMakeLists.txt  LICENSE  README.md  environment.yml
configs/public/: config_utils.py  default.ini
result_examples/: TrackEval_results.md
src_cpp/: detector.cpp  detector.h  main.cpp
src_cpp/config/: app_config.cpp  app_config.h  ini_config.h
src_cpp/core/: detection.h  detector.cpp  detector.h  hungarian.h  sort_tracker.cpp  sort_tracker.h
src_cpp/io/: input_resolver.cpp  input_resolver.h  output_writer.cpp  output_writer.h
src_cpp/utils/: visualization.cpp  visualization.h
src_python/: kitti_dataset.py  train.ipynb
tools_py/: export_and_verify.py  visualize_kitti.py
